fix: validator error and doc path

--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -14,7 +14,7 @@
     <div class="container header">
       <p>Image gallery</p>
 
-      <label for="search-input" class="search">
+      <div class="search">
         <input type="text" class="search__input" id="search-input" placeholder="Find image">
 
         <button class="search__btn">
@@ -26,7 +26,7 @@
             <path d="m291-240-51-51 189-189-189-189 51-51 189 189 189-189 51 51-189 189 189 189-51 51-189-189-189 189Z"/>
           </svg>
         </button>
-      </label>
+      </div>
     </div>
   </header>
 
