--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -12,21 +12,21 @@
 <body>
   <header class="header">
     <div class="container header">
-      <p>Image gallery</p>
+      <h1>Image gallery</h1>
 
-      <div class="search">
-        <input type="text" class="search__input" id="search-input" placeholder="Find image">
+      <form id="search" class="search__form">
+        <input type="text" class="search__input" id="search-input" autocomplete="off" placeholder="Find image" autofocus>
 
-        <button class="search__btn">
-          <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="20">
+        <button type="reset" class="search__btn" id="clear-input">
+          <svg class="hide" xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="20">
             <path d="M765-144 526-383q-30 22-65.792 34.5T384.035-336Q284-336 214-406t-70-170q0-100 70-170t170-70q100 0 170 70t70 170.035q0 40.381-12.5 76.173T577-434l239 239-51 51ZM384-408q70 0 119-49t49-119q0-70-49-119t-119-49q-70 0-119 49t-49 119q0 70 49 119t119 49Z"/>
           </svg>
 
-          <svg class="hide" xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="20">
+          <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 -960 960 960" width="20">
             <path d="m291-240-51-51 189-189-189-189 51-51 189 189 189-189 51 51-189 189 189 189-51 51-189-189-189 189Z"/>
           </svg>
         </button>
-      </div>
+      </form>
     </div>
   </header>
 
